--- a/mobile/web/resources/css/login.css
+++ b/mobile/web/resources/css/login.css
@@ -7,19 +7,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     display: table;
-    position: relative;
-}
-
-
-.tit{
-    width: 10rem;
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.8rem;
-    color: silver;
-    text-align: center;
-    position: absolute;
-    margin-top: 4.4rem;
 }
 
 .boxCenter {
@@ -29,13 +16,32 @@ body {
 
 .loginBox {
     width: 5rem;
-    height: 2rem;
     margin: 0 auto;
+}
+
+.tit{
+    height: 1rem;
+    line-height: 1rem;
+    font-size: 0.8rem;
+    color: #f0f4f7;
+    text-align: center;
+    margin-bottom: 1.2rem;
+    font-weight: 600;
 }
 
 .loginBox .text {
     width: 5rem;
     height: 0.8rem;
+}
+
+.loginBox .button{
+    display: inline-block;
+    text-align: center;
+    line-height: 0.8rem;
+    color: #f0f4f7;
+    border: none;
+    font-size: 0.44rem;
+    background-color: #f6662a;
 }
 
 .loginBox .text >input{
@@ -47,6 +53,10 @@ body {
     border: none;
     float: left;
     margin-bottom: 0.4rem;
+}
+
+.loginBox .text >.code{
+    margin-bottom: 0;
 }
 
 .loginBox .text > .tel {
@@ -63,7 +73,7 @@ body {
     line-height: 0.8rem;
     font-size: 0.42rem;
     text-align: center;
-    background: orange;
+    background: #b2e73d;
     float: right;
     color: #f0f4f7;
 }
