--- a/mobile/web/resources/css/center.css
+++ b/mobile/web/resources/css/center.css
@@ -1,23 +1,71 @@
-.head{
+.head {
     width: 10rem;
     height: 3rem;
-    border-bottom: 1px solid #333333;
+    border-bottom: 2px solid #666;
+    padding: 0.6rem;
+    box-sizing: border-box;
 }
-.menu{
+
+.head > img {
+    float: left;
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 0.9rem;
+}
+
+.head > .info {
+    margin-left: 0.4rem;
+    padding-top: 0.5rem;
+    box-sizing: border-box;
+    float: left;
+    height: 1.8rem;
+    line-height: 0.6rem;
+    font-size: 0.4rem;
+}
+
+.menu {
     width: 10rem;
 }
 
-.menu>.menuOne{
+.menu > .menuOne {
     height: 1.6rem;
-    border-bottom: 1px solid #333333;
+    padding: 0.2rem 0.6rem;
+    box-sizing: border-box;
+    border-bottom: 2px solid #666;
 }
 
-.foot{
-    margin-top: 0.2rem;
+.menuOne > .ico, .menuOne > .name, .menuOne > .go {
+    float: left;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    text-align: center;
+    width: 1.4rem;
+    font-size: 0.8rem;
+}
+
+.menuOne > .name {
+    text-indent: 0.4rem;
+    text-align: left;
+    width: 4rem;
+    font-size: 0.4rem;
+}
+
+.menuOne > .go {
+    float: right;
+    font-size: 0.4rem;
+    width: 1rem;
+}
+
+.menuOne i {
+    color: #505050;
+}
+
+.foot {
+    margin-top: 0.6rem;
     width: 10rem;
 }
 
-.foot>a{
+.foot > a {
     display: block;
     width: 3rem;
     height: 0.8rem;
@@ -25,8 +73,6 @@
     font-size: 0.4rem;
     margin: 0 auto;
     text-align: center;
-    text-decoration: none;
-    color: #333333;
-    border: 1px solid #333333;
+    border: 2px solid #666;
     border-radius: 2px;
 }
