--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -1,6 +1,12 @@
 * {
     padding: 0;
     margin: 0;
+    color: #333333;
+    font-weight: 600;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
@@ -10,4 +16,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+.layui-layer-content > span {
+    color: #f0f4f7;
+    font-weight: 400;
 }
