--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -22,3 +22,28 @@ body {
     color: #f0f4f7;
     font-weight: 400;
 }
+
+.head {
+    width: 10rem;
+    height: 3rem;
+    border-bottom: 2px solid #666;
+    padding: 0.6rem;
+    box-sizing: border-box;
+}
+
+.head > img {
+    float: left;
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 0.9rem;
+}
+
+.head > .info {
+    margin-left: 0.4rem;
+    padding-top: 0.5rem;
+    box-sizing: border-box;
+    float: left;
+    height: 1.8rem;
+    line-height: 0.6rem;
+    font-size: 0.4rem;
+}
