--- a/mobile/web/resources/css/info.css
+++ b/mobile/web/resources/css/info.css
@@ -9,7 +9,7 @@
     border-bottom: 2px solid #666;
 }
 
-.menuOne > .ico, .menuOne > .name, .menuOne > .go {
+.menuOne > .ico, .menuOne > .name, .menuOne > .info {
     float: left;
     height: 1.2rem;
     line-height: 1.2rem;
@@ -21,33 +21,18 @@
 .menuOne > .name {
     text-indent: 0.4rem;
     text-align: left;
-    width: 4rem;
+    width: 2.6rem;
     font-size: 0.4rem;
 }
 
-.menuOne > .go {
-    float: right;
+.menuOne > .info {
+    float: left;
     font-size: 0.4rem;
-    width: 1rem;
+    max-width: 4.8rem;
+    overflow-x: hidden;
+    text-align: left;
 }
 
 .menuOne i {
     color: #505050;
-}
-
-.foot {
-    margin-top: 0.6rem;
-    width: 10rem;
-}
-
-.foot > a {
-    display: block;
-    width: 3rem;
-    height: 0.8rem;
-    line-height: 0.8rem;
-    font-size: 0.4rem;
-    margin: 0 auto;
-    text-align: center;
-    border: 2px solid #666;
-    border-radius: 2px;
 }
