--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -11,11 +11,7 @@ a {
 
 body {
     width: 10rem;
-    background-image: url("../img/center.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    background-color: white;
 }
 
 .layui-layer-content > span {
