--- a/mobile/web/resources/css/login.css
+++ b/mobile/web/resources/css/login.css
@@ -2,6 +2,10 @@ body {
     width: 10rem;
     height: 16rem;
     background-image: url("../img/login.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     display: table;
 }
 
